--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body
 
 .dropdown{
   padding: 20px;
-  position: fixed;
+  float: left;
 }
 
 .dropdown p{
@@ -14,7 +14,8 @@ body
 }
 
 .dropdown button{
-  width:100%;
+  width:50%;
+    float: left;
 }
 .card{
   padding: 20px;
