--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body{
     justify-content: center;
 }
 
-#landing .button{
+.button{
     font-size: 18px;
     color:black;
     text-decoration: none;
@@ -34,7 +34,7 @@ body{
     padding: 10px 20px;
     border-radius: 100px;
 }
-#landing .button:hover{
+.button:hover{
     background-color: black;
     color: white;
 }
