--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body{
 }
 
 #mainbox{
-  background: rgba(127, 157, 185, 0.80);
+  background: rgba(211, 211, 211, 0.54);
   padding: 30px;
   border-radius: 60px;
 }
@@ -30,6 +30,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding-bottom: 20px;
 }
 
 .button{
@@ -48,6 +49,7 @@ body{
 
 #landing p {
     padding-bottom: 20px;
+    text-align: center;
 }
 
 .navbar{
@@ -55,12 +57,12 @@ body{
     background-color: #122F4B;
 }
 
-  main{
+main{
     padding-left: 10%;
     padding-right: 10%;
     padding-bottom: 5%;
   
-  }
+}
   .parallax-body, .parallax{
     height:100%;
     margin:0;
@@ -69,7 +71,7 @@ body{
     font-weight:400;
     line-height:1.8em;
     color:#666;
-  }
+}
   
   .parallax-img{
     position:relative;
@@ -78,78 +80,85 @@ body{
     background-size:cover;
     background-repeat:no-repeat;
     background-attachment:fixed;
-  }
+}
 
   .parallax-landing{
     min-height:100%;
-  }
+}
 
   .parallax-section{
       min-height:400px;
-    }
+}
 
   .section{
     text-align:center;
     padding:50px 80px;
-  }
+}
   
   .section-light{
     background-color:#f4f4f4;
     color:#666;
-  }
+}
   
   .section-dark{
     background-color:#122F4B;
     color:#ddd;
-  }
+}
   
   .ptext{
+    background-color:rgba(18, 47, 75, 0.8);
     position:absolute;
     top:50%;
     width:100%;
     text-align:center;
-    color:#000;
+    color:#fff;
     font-size:27px;
     letter-spacing:8px;
     text-transform:uppercase;
-  }
+    padding: 0px 20px;
+}
   
   .ptext .border{
-    background-color:#111;
-    color:#fff;
-    padding:30px 80px;
-  }
+    line-height: 200%;
+}
     
   span.border.trans{
-    background:#122F4B;
-    line-height: 200%;
-    padding: 30px 10px;
     
-  }
+}
   
-  @media(max-width:778px){
-    .parallax-img{
-      background-attachment:scroll;
-    }
+@media(max-width:778px){
+      .parallax-img{
+        background-attachment:scroll;
+  }
 
-    #buttons{
-      display: flex;
-      flex-direction: column;
-      text-align: center;
-    }
+  #buttons{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+  }
 
-    .button{
-      margin: 3%;
-      padding: 5%;
-      font-size: 35px;
-    }
+  .button{
+        margin: 3%;
+        padding: 5%;
+        font-size: 35px;
+  }
       
-      #mainbox{
-background:none;
-    
-  }
+  body{
+        line-height: 1;
+      }
+
+  .section{
+      padding: 50px 20px;
+    }
+    #mainbox{
+      padding: 10px;
+    }
+    .ptext{
+      top: 40%;
+    }
+}
   
-  @media(max-width: 876px){
+@media(max-width: 876px){
   .navbar-header a{
     display: none;
   }
